Fix right alignment of numeric values in grid
Fixes #320

--- a/axelor-front/src/views/grid/grid.module.scss
+++ b/axelor-front/src/views/grid/grid.module.scss
@@ -78,3 +78,7 @@
     margin: 0 !important;
   }
 }
+
+.number {
+  justify-content: end;
+}
